syntax = "proto3";
option java_multiple_files = true;
package com.misc.grpc.services;

enum TransactionType {
  CARD = 0;
  UPI = 1;
  QR_PAYMENT = 2;
}

message OrderDetailsRequest {
  map<string, string> products = 1; // name = index;
  repeated string coupons = 2;
  TransactionType txnType = 3;
}

message ProceedTransactionResponse {
  string txnId = 1;
  bool proceedTransaction = 2;
}

service OrderService {
  rpc isProceedTransaction( OrderDetailsRequest ) returns (ProceedTransactionResponse);
}

// Chat Streaming example
import "google/protobuf/timestamp.proto";

message ChatMessage {
  string from = 1;
  string message = 2;
}

message ChatMessageFromServer {
  google.protobuf.Timestamp timeStamp = 1;
  ChatMessage message = 2;
}

service ChatService {
  rpc chat(stream ChatMessage) returns (stream ChatMessageFromServer);
}
// remove stream before ChatMessage to make it only stream from server